Adding organizers to dynamic content and removing latests spanishs texts

--- a/assets/locale/en-US/translation.po
+++ b/assets/locale/en-US/translation.po
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2023-02-13T18:43:48.537Z\n"
-"PO-Revision-Date: 2023-02-13T18:43:48.537Z\n"
+"POT-Creation-Date: 2023-02-13T19:23:43.668Z\n"
+"PO-Revision-Date: 2023-02-13T19:23:43.668Z\n"
 
 msgid "contest"
 msgstr "Contest"
@@ -118,45 +118,6 @@ msgstr "Media appearances"
 msgid "organized-by"
 msgstr "Organized by"
 
-msgid "organized-by-age"
-msgstr ""
-"<h4>Spanish Association of Geography</h4> <p> The <a "
-"href=\"https://www.age-geografia.es/site/\">Spanish Association of "
-"Geography</a> is a group of geography professionals whose main purpose is "
-"to promote and develop Spanish geographic science and its applications and "
-"to disseminate and publicize geographic knowledge in society. Since it was "
-"founded in 1975, the AGE has focused its activities on promoting scientific "
-"meetings, coordinating the actions of Spanish geography in society and "
-"collaborating with other national and international geographic "
-"associations. Currently the AGE brings together some 1,090 people linked to "
-"geography through teaching, research and the free exercise of the "
-"profession of geographer. Among the activities of the AGE is the "
-"celebration every two years of the General Congresses, which are hosted by "
-"the Departments of Geography of the Spanish universities. In alternate "
-"years, the Association organizes conferences to disseminate geography, in "
-"order to bring it closer to society and make known its proposals on current "
-"issues. The members of the AGE receive complete information about the "
-"celebration and results of all the activities and obtain economic "
-"advantages in the participation. </p> <p> This initiative is organized "
-"through its <a "
-"href=\"https://www.age-geografia.es/site/geovoluntariado-digital/\"> "
-"GeoVolunteer Program. </a> </p>"
-
-msgid "organized-by-geodevelopers"
-msgstr ""
-"<h4>GeoDevelopers</h4> <p> <a href=\"https://www.geodevelopers.org/\"> "
-"GeoDevelopers </a> is a community of people who since 2014 are exchanging "
-"knowledge about application development using geo-referenced data and maps, "
-"data visualization, spatial analysis, etc. </p> <p> On the <a "
-"href=\"https://www.youtube.com/channel/UC5Kegds6aV88wjdAhqQ5Wsg\"> Youtube "
-"channel </a> you can find the talks organized to date, and using the <a "
-"href=\"https://discord.gg/8pXkBPkvd2\"> Discord </a> messaging system you "
-"can chat with them. </p> <div class=\"iframe\"> <div class=\"iframe\"> "
-"<iframe width=\"320\" height=\"180\" "
-"src=\"https://www.youtube.com/embed/_vZT9yM0R6Q\" title=\"YouTube video "
-"player\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; "
-"gyroscope; picture-in-picture\" allowfullscreen> </iframe> </div> </div>"
-
 msgid "partners"
 msgstr "Partners"
 
@@ -166,44 +127,41 @@ msgstr ""
 "info@geovoluntarios.org."
 
 msgid "contest-rules-title"
-msgstr "Bases del concurso"
+msgstr "Contest rules"
 
 msgid "contest-rules-details"
 msgstr ""
-"<h2><strong>Participantes:</strong></h2> <p>El concurso está abierto a "
-"jugadores/as jóvenes y adultos/as, de cualquier nivel de formación. El "
-"juego está expresado en español.</p> <h2><strong>Inscripción y fechas a "
-"recordar</strong>:</h2> <p>Inscripción: <strong> <em> La inscripción es "
-"gratuita </em>.</strong></p> <p>El plazo de inscripción estará abierto "
-"hasta el día <em> <strong>30 de marzo. </strong></em></p> <p>Para jugar y "
-"concursar, los jugadores/as deben acceder a la <strong>hoja de inscripción "
-"(<a target=\"_blank\" "
+"<h2> <strong>Participants:</strong> </h2> <p> The contest is open to young "
+"and adult players, of any level of education. The game is in English. </p> "
+"<h2> <strong>Registration and dates to remember:</strong> </h2> <p> "
+"Registration: <strong>Registration is free of charge </strong>. </p> <p> "
+"The registration period will be open until <strong>13th of April </strong>. "
+"</p> <p> To play and compete, players must access the <strong>registration "
+"form ( <a target=\"_blank\" "
 "href=\"https://docs.google.com/forms/d/1aEyp15LtpqtR8oXwYNW3DiveaGrxERiV2"
-"PEm7P3CKos/viewform?edit_requested=true\">aquí</a>),</strong> seleccionar "
-"el día y hora de juego que prefieren, e inscribirse en la sesión de juego "
-"correspondiente.</p> <p>Las sesiones <strong>se juegan de forma cooperativa "
-"en una reunión on-line y cada grupo obtiene una única puntuación "
-"conjunta</strong> con la que compite con la obtenida por los grupos de "
-"jugadores/as de otras sesiones. <strong>Cada sesión de juego admite un "
-"máximo de 10 jugadores/as</strong></p> <p><strong>Las sesiones de juego se "
-"celebrarán en formato on-line en distintos tramos horarios de los días 31 "
-"de Marzo y 1 de abril de 2022</strong>. <strong>Los participantes inscritos "
-"recibirán una invitación a la sesión on-line</strong> en la que se "
-"desarrollará el juego en grupo.</p> <p>La<strong> resolución de los "
-"enigmas</strong> del juego y los ganadores del concurso se harán públicos "
-"en una sesión conjunta con todos los jugadores <strong>el día viernes 1 de "
-"Abril a las 22 h una vez finalizadas todas las sesiones de juego</strong> y "
-"coincidiendo con la celebración de Geo-Night en todo el mundo. <strong>La "
-"invitación a la Sesión Final del Juego-Concurso</strong> se adjuntará en el "
-"<strong>formulario de inscripción en el día de celebración.</strong></p> "
-"<h2><strong>Premios:</strong></h2> <p>Los grupos ganadores recibirán como "
-"premio un conjunto de obsequios vinculados a la Geografía:</p> <ul> "
-"<li>Libros y Atlas de Geo-Planeta: libros relacionados con viajes, "
-"descubrimientos, rutas y otras temáticas geográficas, y atlas de enfoque "
-"singular</li> <li>Libros de Lunwerg&ndash;Planeta relacionados con "
-"propuestas de gamificación de contenidos geográfico (Escape-Maps)</li> "
-"<li>Obsequio de la librería especializada en temática geográfica Mapas y "
-"Compañía.</li> </ul>"
+"PEm7P3CKos/viewform?edit_requested=true\">here</a>) </strong>, select their "
+"preferred day and time of play, and register for the corresponding game "
+"session. </p> <p> The sessions <strong>are played cooperatively in an "
+"on-line meeting and each group obtains a single joint score</strong> to "
+"compete with that obtained by groups of players from other sessions. "
+"<strong>Each game session admits a maximum of 10 players</strong>. </p> <p> "
+"<strong> The game sessions will be held in an on-line format in different "
+"time slots on 13th and 14th of April, 2023. Registered participants will "
+"receive an invitation to the on-line session </strong> in which the group "
+"game will take place. </p> <p> The <strong>resolution of the game "
+"riddles</strong> and the winners of the contest <strong>will be made public "
+"in a joint session with all the players on April 14 at 10 p.m. after the "
+"end of all the game sessions</strong> and coinciding with the celebration "
+"of Geo-Night around the world. <strong>The invitation to the Final "
+"Game-Contest Session</strong> will be attached to the <strong>registration "
+"form</strong> on the day of celebration. </p> <h2> <strong>Prizes:</strong> "
+"</h2> <p> The winning groups will receive as a prize a set of gifts linked "
+"to Geography: </p> <ul> <li> Books and atlases from Geo-Planeta: books "
+"related to travel, discoveries, routes and other geographic themes, and "
+"atlases with a singular approach </li> <li> Books from Lunwerg & Planeta "
+"related to gamification proposals of geographic content (Escape-Maps) </li> "
+"<li> Gift from the bookstore specialized in geographic themes Mapas y "
+"Compañía. </li> </ul>"
 
 msgid "close-rules"
 msgstr ""
