Preparing to add show all button #15 and removing Terra incógnita contest

--- a/assets/locale/en-US/partners.json
+++ b/assets/locale/en-US/partners.json
@@ -2,5 +2,9 @@
   "didactalia": {
     "name": "Didactalia",
     "html": "<h4>Didactalia</h4> <p> <a href=\"https://mapasinteractivos.didactalia.net/en/community/mapasflashinteractivos\">Didactalia.net</a> is a global educational community for teachers, parents and students from Kindergarten to High School that includes a collection of more than 100,000 open educational resources. Here, users can create, share and discover educational content and promote classes and learning communities in which to work on lessons in a social space with faceted searches and enriched contexts.</p>"
+  },
+  "nao-casanova": {
+    "name": "Nao Casanova",
+    "html": "<p><a href=\"https://twitter.com/NaoCasanova\">@NaoCasanova</a> is a civil engineer who works in an engineering consultancy, and author of the book \"<a href=\"https://www.amazon.es/EL-AMIGO-ESTUDIANTE-MATEM%C3%81TICAS-Volumen-ebook/dp/B084JJ2YZY/ref=sr_1_1?qid=1679654099&refinements=p_27%3ANao+Casanova&s=digital-text&sr=1-1&text=Nao+Casanova\">Las Plumas del Diablo</a>\". She is a very active twitterer who uses the network as a place to \"take notes in public\", so she shares all kinds of things, from things she wants to learn, review or things that make her laugh.</p><p>We want to thank her publicly because <a href=\"https://twitter.com/NaoCasanova/status/1538514141253623808?t=NYLrWNckARhX2rV8b0ZCuA&s=19\">one of her threads on Twitter</a> has been of great help to expand the catalog of games listed on this page."
   }
 }
