Updating readme, styles, organizers, show all games, translations, etc

--- a/assets/locale/es-ES/translation.json
+++ b/assets/locale/es-ES/translation.json
@@ -1,142 +1,17 @@
 {
     "event-title": "La noche de la Geografía",
-    "event-date": "31 de Marzo - 1 de Abril 2022",
+    "event-date": "14 de Abril 2023",
     "promo-text": "Más de <a href=\"#sobre-la-geonight\" class=\"yellow js-scroll-trigger\">200 eventos simultáneos</a> para disfrutar de la geografía en 40 países de 5 continentes",
-    "game-name": "Juego-Concurso Terra Incógnita",
-    "contest": "Concurso",
     "play": "Juega",
     "about-us": "Sobre esta iniciativa",
-    "piaget-quote": "Los niños y niñas no juegan para aprender, aprenden porque juegan.",
-    "jean-piaget": "Jean Piaget",
-    "intro-paragraph-1": "Entre los días <strong>31 de Marzo y 1 de Abril</strong> de 2022 se organizarán sesiones de juego grupales (de hasta 10 personas) de <strong>una hora de duración entre las 17 y las 20 (CET) </strong>.",
-    "intro-paragraph-2": "<strong>De forma colectiva cada grupo tendrá que desvelar la identidad y localización de una serie de lugares ubicados en distintos puntos del mundo</strong>. Para descubrirlos, se darán pistas de contenido geográfico (características del medio físico y del medio humano, potencialidades, riesgos, problemas ambientales, etc.).",
-    "intro-paragraph-3": "Los grupos ganadores recibirán un conjunto de obsequios vinculados a la Geografía como premio.",
-    "subscribe-for-free": "Inscríbete gratuitamente",
-    "contest-rules": "Bases del concurso",
     "play-paragraph": "Además de con el concurso, <strong class=\"yellow\">puedes seguir poniendo a prueba tus conocimientos en Geografía</strong> con los siguientes juegos.",
     "missing-a-game": "¿Conoces algún juego que no esté listado aquí?, por favor escríbenos a info@geovoluntarios.org.",
     "about-the-initiative": "<h2>Sobre esta iniciativa</h2> <p> La <a href=\"https://es.wikipedia.org/wiki/Geograf%C3%ADa\">Geografía</a> es la ciencia apasionante que mueve el mundo y anecdóticamente bastante desconocida por la mayoría de las personas. <strong class=\"bg-yellow\">Si paras a cualquiera por la calle y le preguntas: \"¿sabes <a href=\"https://www.age-geografia.es/site/somos-geografs/\"\">qué puede hacer una persona titulada en Geografía</a>?\" , habrá pocas que sepan decir algo más que: leer mapas, nombrar capitales, ríos o cosas parecidas.</strong> </p> <p> Las/os profesionales en Geografía están capacitados/as para mucho más, como: saber cómo <a href=\"https://es.wikipedia.org/wiki/Planificaci%C3%B3n_Territorial\" >ordenar el territorio</a>, combatir el cambio climático y sus consecuencias, luchar contra los riesgos naturales y tecnológicos, <a href=\"https://es.wikipedia.org/wiki/Geomarketing\">diseñar estrategias de geomarketing</a>, utilizar herramientas de <a href=\"https://es.wikipedia.org/wiki/Teledetecci%C3%B3n\">teledetección</a> de última generación, encontrar patrones y relaciones entre problemas de humanos y naturales a través del <a href=\"https://es.wikipedia.org/wiki/An%C3%A1lisis_espacial\" >análisis espacial</a>, convirtiéndoles en perfectos aliados para ayudar a lograr los <a href=\"https://www.un.org/sustainabledevelopment/es/objetivos-de-desarrollo-sostenible/\" >Objetivos de Desarrollo Sostenible</a>, y mucho más. </p> <p> Con el objetivo de poner en relieve la geografía y a los/as profesionales de este campo, se celebra <strong class=\"bg-yellow\">La \"Noche de la Geografía\" (<a href=\"https://www.geonight.net/\">geonight.net</a>) una iniciativa internacional en la que una tarde o noche al año <a href=\"https://www.geonight.net/geonight-2021-events-map/\">se organizan eventos simultáneamente en todo el mundo</a></strong>. </p> <p> De esta forma se <strong class=\"bg-yellow\">pretende que cualquier persona tenga la oportunidad de familiarizarse con el enfoque de la disciplina geográfica, su labor de investigación y su utilidad como ciencia aplicada para resolver los grandes retos a los que se enfrenta el planeta</strong>. </p> <p> Concretamente <strong class=\"bg-yellow\">esta página que estás visitando es una <a href=\"https://www.age-geografia.es/site/juega-con-la-age-en-la-noche-de-la-geografia/\">iniciativa lúdica puesta en marcha por la Asociación Española de Geografía</a> en colaboración con otras entidades</strong> para difundir los contenidos de la Geografía, así como fomentar la conexión entre el colectivo de geógrafos/as y aficionados/as a la Geografía de distintas partes del mundo. </p> <p> El juego-concurso Terra Incógnita ha sido creado por la AGE y la Red TransUMAntes de la UMA, y desarrollado desde la comunidad de GeoDevelopers. </p>",
     "media-appearences": "Apariciones en medios",
-    "media-appearences-rne": "",
-    "media-onda-cero": "",
     "organized-by": "Organizan",
-    "organized-by-age": "<h4>Asociación Española de Geografía</h4> <p> La <a href=\"https://www.age-geografia.es/site/\">Asociación Española de Geografía</a> es una agrupación de profesionales de la geografía cuya finalidad principal es fomentar y desarrollar la ciencia geográfica española y sus aplicaciones y difundir y dar a conocer los conocimientos geográficos en la sociedad. Desde que se constituyó en 1975, la actuación de la AGE se ha centrado en promover reuniones científicas, coordinar la actuación de la geografía española ante la sociedad y colaborar con otras asociaciones geográficas tanto nacionales como internacionales. Actualmente la AGE agrupa unas 1.090 personas vinculadas con la geografía a través sobre todo de la docencia, la investigación y el ejercicio libre de la profesión de geógrafo/a. Entre las actividades de la AGE destaca la celebración cada dos años de los Congresos generales, de los que son sede los Departamentos de Geografía de las universidades españolas. En los años alternos, la Asociación organiza jornadas de difusión de la geografía, con objeto de acercarla a la sociedad y dar a conocer sus propuestas en asuntos de actualidad. Los/as asociados/as de la AGE reciben una completa información sobre la celebración y resultado de todas las actividades y obtienen ventajas económicas en la participación. </p> <p> Esta iniciativa la organiza a través de su <a href=\"https://www.age-geografia.es/site/geovoluntariado-digital/\">Programa de GeoVoluntariado</a>.</p>\"",
-    "organized-by-geodevelopers": "<h4>GeoDevelopers</h4> <p> <a href=\\\"https://www.geodevelopers.org/\\\"> GeoDevelopers </a> es una comunidad de personas que desde 2014 están intercambiando conocimientos sobre el desarrollo de aplicaciones usando datos georeferenciados y mapas, visualización de datos, análisis espacial, etc. </p> <p> En el <a href=\\\"https://www.youtube.com/channel/UC5Kegds6aV88wjdAhqQ5Wsg\\\">canal de Youtube</a> se pueden encontrar las charlas organizadas hasta la fecha, y usando el sistema de mensajería <a href=\\\"https://discord.gg/8pXkBPkvd2\\\">Discord</a> puedes chatear con ellos. </p> <div class=\\\"iframe\\\"> <div class=\\\"iframe\\\"> <iframe width=\\\"320\\\" height=\\\"180\\\" src=\\\"https://www.youtube.com/embed/_vZT9yM0R6Q\\\" title=\\\"YouTube video player\\\" allow=\\\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\\\" allowfullscreen ></iframe> </div> </div>",
     "partners": "Colaboran",
-    "partners-ign": "",
-    "partners-sge": "",
-    "partners-didactalia": "",
-    "partners-geovoluntarios": "",
-    "partners-geoplaneta": "",
-    "partners-lunwerg": "",
-    "partners-mapas-y-cia": "",
-    "partners-esri": "",
-    "partners-agron": "",
-    "partners-nosolosig": "",
-    "geogragia-en-red": "",
-    "partners-gis-and-beers": "",
-    "partners-sig-de-letras": "",
-    "partners-geoinnova": "",
-    "partners-play-and-go": "",
-    "partners-geogragia-infinita": "",
-    "partners-mapping-gis": "",
-    "partners-igear": "",
-    "partners-tyc-gis": "",
-    "partners-geopois": "",
-    "partners-colegio-geografos": "",
-    "partners-unigis": "",
-    "partners-abtemas": "",
-    "partners-tysgal": "",
-    "partners-idee": "",
-    "join-partners": "",
-    "contest-rules-title": "",
-    "contest-rules-details": "",
-    "close-rules": "",
-    "footer-text": "",
+    "join-partners": "Si quieres unirte a los colaboradores, escríbenos a info@geovoluntarios.org.",
+    "footer-text": "<p> <small> Sitio web creado con ❤️ y con la ayuda de voluntarios ( <a href=\"https://www.linkedin.com/in/fabri-moles/\"> Fabri Moles </a>, <a href=\"https://www.linkedin.com/in/martavillalobos/\"> Marta Villalobos </a> y <a href=\"https://www.linkedin.com/in/f%C3%A9lix-franco-rojas-a23557108/\"> Félix Franco </a> ) partiendo de la plantilla <a href=\"https://startbootstrap.com/theme/freelancer\"> Freelancer </a> de Bootstrap. <br> <a href=\"https://github.com/geovoluntarios/geonight/\"> Código fuente disponible en GitHub </a> </small> </p>",
     "game-author": "Autor",
-    "game-open": "Abrir",
-    "game-didactalia-title": "",
-    "game-didactalia-description": "Más de 500 juegos con mapas físicos, políticos, de gentilicios, ambientales, históricos, ...",
-    "game-didactalia-url": "",
-    "game-didactalia-author": "",
-    "game-geosapiens-web-title": "",
-    "game-geosapiens-web-description": "",
-    "game-geosapiens-web-url": "",
-    "game-geosapiens-web-author": "",
-    "game-geosapiens-app-title": "",
-    "game-geosapiens-app-description": "",
-    "game-geosapiens-app-url": "",
-    "game-geosapiens-app-author": "",
-    "game-escape-room-ign-title": "",
-    "game-escape-room-ign-description": "",
-    "game-escape-room-ign-url": "",
-    "game-escape-room-ign-author": "",
-    "game-geography-games-ign-title": "",
-    "game-geography-games-ign-description": "",
-    "game-geography-games-ign-url": "",
-    "game-geography-games-ign-author": "",
-    "game-old-cartography-ign-title": "",
-    "game-old-cartography-ign-description": "",
-    "game-old-cartography-ign-url": "",
-    "game-old-cartography-ign-author": "",
-    "game-appangea-title": "",
-    "game-appangea-description": "",
-    "game-appangea-url": "",
-    "game-appangea-author": "",
-    "game-thinkmaps-puzzle-title": "",
-    "game-thinkmaps-puzzle-description": "",
-    "game-thinkmaps-puzzle-url": "",
-    "game-thinkmaps-puzzle-author": "",
-    "game-name-that-landmark-title": "",
-    "game-name-that-landmark-description": "",
-    "game-name-that-landmark-url": "",
-    "game-name-that-landmark-author": "",
-    "game-geojigsaw-esri-title": "",
-    "game-geojigsaw-esri-description": "",
-    "game-geojigsaw-esri-url": "",
-    "game-geojigsaw-esri-author": "",
-    "game-mappuzzle-title": "",
-    "game-mappuzzle-description": "",
-    "game-mappuzzle-url": "",
-    "game-mappuzzle-author": "",
-    "game-ideex-explora-title": "",
-    "game-ideex-explora-description": "",
-    "game-ideex-explora-url": "",
-    "game-ideex-explora-author": "",
-    "game-idearagon-geo-oca-title": "",
-    "game-idearagon-geo-oca-description": "",
-    "game-idearagon-geo-oca-url": "",
-    "game-idearagon-geo-oca-author": "",
-    "game-idearagon-geo-boom-title": "",
-    "game-idearagon-geo-boom-description": "",
-    "game-idearagon-geo-boom-url": "",
-    "game-idearagon-geo-boom-author": "",
-    "game-idearagon-geo-paisaje-title": "",
-    "game-idearagon-geo-paisaje-description": "",
-    "game-idearagon-geo-paisaje-url": "",
-    "game-idearagon-geo-paisaje-author": "",
-    "game-idearagon-crea-tu-ciudad-title": "",
-    "game-idearagon-crea-tu-ciudad-description": "",
-    "game-idearagon-crea-tu-ciudad-url": "",
-    "game-idearagon-crea-tu-ciudad-author": "",
-    "game-idearagon-carmen-sandiego-title": "",
-    "game-idearagon-carmen-sandiego-description": "",
-    "game-idearagon-carmen-sandiego-url": "",
-    "game-idearagon-carmen-sandiego-author": "",
-    "game-seterra-title": "",
-    "game-seterra-description": "",
-    "game-seterra-url": "",
-    "game-seterra-author": "",
-    "game-find-the-country-capital-title": "",
-    "game-find-the-country-capital-description": "",
-    "game-find-the-country-capital-url": "",
-    "game-find-the-country-capital-author": "",
-    "game-wordle-title": "",
-    "game-wordle-description": "",
-    "game-wordle-url": "",
-    "game-wordle-author": "",
-    "game-globle-game-title": "",
-    "game-globle-game-description": "",
-    "game-globle-game-url": "",
-    "game-globle-game-author": ""
+    "game-open": "Abrir"
 }
