Adding translation, minor CSS change and replace old social image

--- a/assets/locale/en-US/translation.po
+++ b/assets/locale/en-US/translation.po
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2023-03-24T11:39:32.396Z\n"
-"PO-Revision-Date: 2023-03-24T11:39:32.396Z\n"
+"POT-Creation-Date: 2023-03-24T12:41:14.826Z\n"
+"PO-Revision-Date: 2023-03-24T12:41:14.826Z\n"
 
 msgid "play"
 msgstr "Play"
@@ -30,6 +30,9 @@ msgid "play-paragraph"
 msgstr ""
 "<strong class=\"yellow\"> Test your knowledge of geography </strong> with "
 "the following games."
+
+msgid "show-all-games"
+msgstr "Show games in all languages"
 
 msgid "missing-a-game"
 msgstr ""
