Updating partners descriptions, hiding organizers, and improving texts

--- a/assets/locale/en-US/translation.po
+++ b/assets/locale/en-US/translation.po
@@ -5,8 +5,8 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
-"POT-Creation-Date: 2023-03-24T12:41:14.826Z\n"
-"PO-Revision-Date: 2023-03-24T12:41:14.826Z\n"
+"POT-Creation-Date: 2023-04-13T06:24:44.047Z\n"
+"PO-Revision-Date: 2023-04-13T06:24:44.047Z\n"
 
 msgid "play"
 msgstr "Play"
@@ -69,11 +69,11 @@ msgstr ""
 "approach of the geographic discipline, its research work, and its "
 "usefulness as an applied science to solve the great challenges facing the "
 "planet. </strong> </p> <p> Specifically, <strong class=\"bg-yellow\"> this "
-"page you are visiting is a recreational initiative launched by the Spanish "
-"Association of Geography in collaboration with other entities </strong> to "
-"disseminate the contents of geography as well as to promote the connection "
-"between the group of geographers and geography enthusiasts from different "
-"parts of the world. </p>"
+"page you are visiting is a recreational initiative that was originally "
+"launched by the Spanish Association of Geography in collaboration with "
+"other entities </strong> to disseminate the contents of geography as well "
+"as to promote the connection between the group of geographers and geography "
+"enthusiasts from different parts of the world. </p>"
 
 msgid "media-appearences"
 msgstr "Media appearances"
@@ -85,7 +85,7 @@ msgid "partners"
 msgstr "Partners"
 
 msgid "join-partners"
-msgstr "If you want to join the contributors, message us at info@geovoluntarios.org."
+msgstr "If you want to become a partner, contact us at info@geovoluntarios.org."
 
 msgid "footer-text"
 msgstr ""
