Fixing minor bugs: broken links and missing translations

--- a/assets/locale/es-ES/games.json
+++ b/assets/locale/es-ES/games.json
@@ -1,7 +1,7 @@
 {
   "didactalia": {
     "title": "Didactalia",
-    "description": "More than 500 games with physical, political, gentilic, environmental, historical maps, ...",
+    "description": "Más de 500 juegos con mapas físicos, políticos, gentilicios, medioambientales, históricos, ...",
     "url": "https://mapasinteractivos.didactalia.net/comunidad/mapasflashinteractivos/MapasDidactalia?",
     "author": "Didactalia"
   },
